--- a/base/src/main/res/layout/list_dialog_item_layout.xml
+++ b/base/src/main/res/layout/list_dialog_item_layout.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialogItemView"
     style="@style/TextAppearance.MaterialComponents.Body1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bottom_line"
-    android:backgroundTint="?android:textColorPrimary"
+    android:backgroundTint="?attr/dividerColor"
     android:foreground="?attr/selectableItemBackground"
     android:padding="@dimen/padding_default_16dp"
     android:text="@{listItem.text}"
