--- a/base/src/main/res/layout/style_pager_layout.xml
+++ b/base/src/main/res/layout/style_pager_layout.xml
@@ -3,7 +3,7 @@
     android:id="@+id/styleGif"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/motiv_gradient"
+    android:background="?android:colorBackground"
     android:scaleType="center" />
 
 
