--- a/manager/src/main/res/layout/style_preview_card.xml
+++ b/manager/src/main/res/layout/style_preview_card.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/styleCard"
     style="@style/StyleCard"
-    android:layout_width="70dp"
-    android:layout_height="70dp"
+    android:layout_width="90dp"
+    android:layout_height="90dp"
+    android:visibility="gone"
     android:layout_margin="@dimen/padding_default_16dp"
     tools:visibility="visible">
 
