--- a/base/src/main/res/drawable/ic_saturn_and_other_planets_primary.xml
+++ b/base/src/main/res/drawable/ic_saturn_and_other_planets_primary.xml
@@ -2,7 +2,7 @@
     android:width="24dp"
     android:height="24dp"
     android:autoMirrored="true"
-    android:tint="?android:textColorPrimary"
+    android:tint="@color/md_white"
     android:viewportWidth="587.934"
     android:viewportHeight="587.935">
     <path
